# EGAD

./: .gitignore  .project  Cargo.toml  EGAD-Openapi-Docs.yaml  EGAD-Openapi-Docs.yml  README.md  config.json  index.html  pom.xml
.github/workflows/: codeql-analysis.yml  main.yml
src/: main.rs
src/databases/: mod.rs
src/databases/key_value/: key_value.rs  mod.rs  redis.rs
src/databases/relational/: mod.rs  relational.rs
src/main/java/com/alexcomeau/: Greeting.java  GreetingController.java  Main.java
src/main/java/com/alexcomeau/config/: Config.java  ConfigException.java  ConfigReader.java  Database.java
src/main/java/com/alexcomeau/database/: DatabaseException.java  DatabaseExecption.java
src/main/java/com/alexcomeau/database/keyvalue/: KVFactory.java  KeyValue.java
src/main/java/com/alexcomeau/database/relational/: Relational.java  (+1 more)
src/main/java/com/alexcomeau/egad/: Main.java
src/main/java/com/alexcomeau/greeting/: Greeting.java  GreetingController.java
src/main/java/com/alexcomeau/kv/: KVRest.java
src/main/java/com/alexcomeau/relational/: RelationalRest.java
src/main/java/com/alexcomeau/rest/: RestError.java  RestResponse.java
src/main/java/com/alexcomeau/restservice/: Greeting.java  GreetingController.java  Main.java
src/main/java/com/alexcomeau/utils/: Common.java  ErrorType.java  ResponseCode.java
src/structs/: errors.rs  mod.rs
src/test/java/com/alexcomeau/: GreetingControllerTests.java  KeyValueTests.java  RelationalIndexTests.java  RelationalTests.java
src/test/java/com/alexcomeau/restservice/: GreetingControllerTests.java
(+35 files in other folders)
