[package]
name = "EGAD"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = { version = "3.0.0", features = ["rustls"] }
actix-rt = "1.1.1"
actix-cors = "0.4.0"
serde = "1.0.114"
serde_json = "1.0"
simple_logger = "1.6.0"
log = "0.4.8"
trust-dns-resolver = "0.20.3"
http = "0.2.4"
redis = "0.8.0"
